[package]
name = "demo_base"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["crates/collections", "crates/errors", "crates/gtl"]

[dependencies]
collections = { path = 'crates/collections' }
errors = { path = 'crates/errors' }
gtl = { path = 'crates/gtl' }
